recursion.logo.lessons.recursion.logo.tree.Tree.scala.error
Tree:17: error: not found: value levecrayon
    levecrayon()
    ^